Fix "Scrolling bar is appear in Chrome when text alignment is center"

--- a/sources/easygenerator.Web/Content/common.less
+++ b/sources/easygenerator.Web/Content/common.less
@@ -324,7 +324,7 @@ img:hover {
     font: 18px 'Heuristica-Regular';
     line-height: 1.5;
     overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: hidden;
     color: @main-text-color;
 
     h1, h2, h3 {
